<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

  <data>

    <variable
        name="flashSettingsViewModel"
        type="org.witness.proofmode.camera.FlashModeViewModel" />

  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:background="@android:color/darker_gray"
      android:layout_height="match_parent">

      <com.google.android.material.card.MaterialCardView
          android:layout_width="60dp"
          android:id="@+id/cardView"
          android:visibility="invisible"
          app:strokeColor="@android:color/black"
          app:strokeWidth="@dimen/cardview_default_radius"
          android:layout_height="60dp"
          app:layout_constraintBottom_toTopOf="@+id/guideline"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toEndOf="@+id/buttonCaptureVideo"
          app:cardCornerRadius="40dp"
          tools:visibility="visible"
          app:cardElevation="2dp">
        <com.google.android.material.card.MaterialCardView
            android:layout_width="80dp"
            app:cardCornerRadius="100dp"
            android:layout_gravity="center"
            android:layout_height="80dp">
          <ImageView
              android:id="@+id/capturedImagePreview"
              android:layout_width="match_parent"
              android:scaleType="centerCrop"
              android:layout_height="match_parent"/>

        </com.google.android.material.card.MaterialCardView>

      </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        app:layout_constraintGuide_begin="45dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:visibility="invisible"
        android:textColor="@android:color/holo_red_dark"
        tools:visibility="visible"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />


    <ImageButton
        android:id="@+id/buttonDot"
        android:contentDescription="@null"
        android:layout_width="wrap_content"
        android:visibility="invisible"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintBottom_toBottomOf="@+id/buttonResume"
        app:layout_constraintEnd_toEndOf="@+id/buttonResume"
        app:layout_constraintStart_toStartOf="@+id/buttonResume"
        app:layout_constraintTop_toTopOf="@+id/buttonResume"
        app:srcCompat="@drawable/ic_circle" />

    <ImageButton
        android:id="@+id/buttonResume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/resume_recording"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonCapturePicture"
        app:srcCompat="@drawable/ic_resume" />

    <ImageButton
        android:id="@+id/buttonPauseVideoRecording"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/pause_video_recording"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toStartOf="@+id/buttonCapturePicture"
        app:srcCompat="@drawable/ic_pause" />

    <ImageButton
        android:id="@+id/buttonCaptureVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/capture_video"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        app:layout_constraintStart_toEndOf="@id/buttonCapturePicture"
        app:srcCompat="@drawable/ic_videocam" />


    <ImageButton
        android:id="@+id/buttonStopRecording"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/stop_video_record"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        app:layout_constraintStart_toEndOf="@id/buttonCapturePicture"
        app:srcCompat="@drawable/ic_stop" />

    <ImageButton
        android:contentDescription="@string/capture_image"
        android:id="@+id/buttonCapturePicture"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_width="65dp"
        android:layout_height="65dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_capture" />

    <ImageButton
        android:id="@+id/buttonFlipCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/flip_camera"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toStartOf="@+id/buttonCapturePicture"
        app:srcCompat="@drawable/ic_flip_camera" />


    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinderView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3">

    </androidx.camera.view.PreviewView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_end="140dp"
        android:orientation="horizontal" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="65dp" />

    <Button
        android:id="@+id/buttonFlashSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_settings"
        android:drawableEnd="@drawable/ic_arrow_down"
        app:icon="@drawable/ic_settings"
        app:layout_constraintBottom_toTopOf="@id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>